<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="kalashnikov_10po2.lab45.PosterActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEmployeeTitle"
        android:id="@+id/buttonEmployees"
        android:layout_below="@+id/checkBox"
        android:layout_alignStart="@+id/buttonCars" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCarTitle"
        android:id="@+id/buttonCars"
        android:layout_below="@+id/buttonEmployees"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleUseContentProvider"
        android:id="@+id/checkBox"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTitleTasks"
        android:id="@+id/buttonTasks"
        android:layout_below="@+id/buttonCars"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
